Initial documentation site scaffold
- Initialize Go module for docgen tool
- Scaffold cmd/docgen with schema and cli subcommands (stubs)
- Create internal/cuedoc and internal/cobradoc packages (stubs)
- Set up Hugo site structure with content directories
- Add Taskfile.yml for build automation
- Create basic content pages (getting-started, guides, reference)
- Add content adapter for CUE definition generation (commented out)
- Configure Hugo with module support (Docsy temporarily disabled)
- Update .gitignore for Hugo and generated files

The docgen tool and Hugo site are scaffolded but not yet functional.
Next steps: implement CUE extraction and cobra doc generation.

See RFC-0006 for full design details.

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,20 @@ go.work.sum
 .env
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
+
+# Build artifacts
+bin/
+public/
+
+# Hugo generated files
+site/resources/
+site/.hugo_build.lock
+
+# Generated documentation
+site/data/schema/*.json
+site/content/reference/cli/opm*.md
+
+# macOS
+.DS_Store
